Change History
==============

0.4 - Unreleased
----------------

- Switch licences to BSD derived. [j23d]
- Use assign slot for widget instead of deprecated rendering. [j23d]
- Changes for compatibility with Kotti>=0.8. These changes
  are not backward compatibel. If you want to use kotti_etherpad
  with Kotti<=0.7.x then pin kotti_etherpad to 0.3.
  - Tests are require pytest fixtures from Kotti>=0.8.
  - Use form classes for the form views instead of deprecated generic functions.


0.3 - 2012-07-19
----------------

- Added a sanitizer to remove a last "/" character of the server_domain. [t2y]
- Fixed the title/description typos for line numbers. [t2y]
- Added test to check if the current username is used for the pad. [j23d]
- Activate translation settings and added title/description for all fields. [t2y]

0.2 - 2012-07-12
----------------

- Update translations. [j23d]
- Use Integer type for border in schema. [j23d]
- Set pad_id directly in the settings. [j23d]


0.2a1 - 2012-07-02
------------------

- Initial version [j23d]